# slothclip

./: LICENSE  README.md  pyproject.toml
SPC/: main.py  subset_names.py  templates.py  unsloth_clip_lora.py  unsloth_loss.py  utils.py  utils_data.py
SPC/data/: data.py
SPC/models/: __init__.py  clip.py  lora.py
