[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SPC"
version = "0.1.0"
description = "A implementation of the SPC theory"
dependencies = [
    "accelerate==1.14.0",
    "arrow==1.4.0",
    "bitsandbytes==0.49.2",
    "cmake==3.31.10",
    "munch",
    "loralib",
    "datasets",
    "transformers==4.56.2",
    "tensorboard",
    "clip @ git+https://github.com/openai/CLIP.git",
    "accelerate",
    "matplotlib",
    "timm",
    "diffusers",
    "joblib",
    "peft",
    "safetensors",
    "huggingface-hub",
    "qwen-vl-utils",
    "unsloth_zoo",
    "bitsandbytes",
]

[tool.setuptools.packages.find]
where = ["SPC"] 